<resources>
    <string name="app_name">Swapy</string>
    <string name="image_transition_name">Show</string>
    <string name="list_item_transition_name">Show shift profile</string>
    <string name="Show_off_profile">Show off profile</string>
    <string name="Show_shift_accepted_profile">Show shift accepted profile</string>
    <string name="Show_off_accepted_profile">Show off accepted profile</string>
    <string name="Show_shift_received_profile">Show shift  received profile</string>
    <string name="Show_off_received_profile">Show off received profile</string>
    <string name="Show_shift_sent_profile">Show shift sent profile</string>
    <string name="Show_off_sent_profile">Show off sent profile</string>
    <string-array name="company">
        <item>Choose company</item>
        <item>Raya</item>
        <item>Vodafone</item>
        <item>Orange</item>
    </string-array>
    <string-array name="account">
        <item>Choose account</item>
    </string-array>
    <string name="current_shift">Current shift</string>
    <string name="preferred_shift">Preferred shift: </string>
    <string name="preferred_shift_2">Preferred shift</string>
    <string name="text_display_contact_info">Contact information will be displayed after the swap request has been accepted.</string>
    <string name="text_display_contact_info2">Contact information will be displayed after you accept the request.</string>
    <string name="btn_send_request">Send a Swap Request</string>
    <string name="request_sent">You have sent a swap request successfully</string>
    <string name="request_accepted">Your swap request has been accepted</string>
    <string name="email">Email</string>
    <string name="email2">Email (ahmed@company.com)</string>
    <string name="password">Password</string>
    <string name="phone">Phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="your_preferred_shift">Your preferred shift:</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="nav_drawer_open">Open Navigation Bar</string>
    <string name="nav_drawer_close">close Navigation Bar</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="received_swap_requests">Received swaps</string>
    <string name="sent_swap_requests">Sent swaps</string>
    <string name="settings">Settings</string>
    <string name="accepted_swap_requests">Accepted swaps</string>
    <string name="approved_swap_requests">Approved swaps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swap">Swap</string>
    <string name="filter">Filter</string>
    <string name="shift_time">04:00 PM</string>
    <string name="swap_time">Swap time: </string>
    <string name="prefered_shift">Preferred Shift: </string>
    <string name="shift_day">Shift day: </string>
    <string name="shift_date">Shift Date: </string>
    <string name="done">done</string>
    <string name="swap_main_text">Create Swap</string>
    <string name="back">back</string>
    <string name="save">save</string>
    <string name="your_current_shift">Your current shift</string>
    <string name="your_current_off">Your current off</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="example_date">Pick a date</string>
    <string name="time">Time</string>
    <string name="team_leader">Team leader</string>
    <string name="your_team_leader_s_name">Your team leader\'s name</string>
    <string name="no_internet_connection">Check your internet connection.</string>
    <string name="no_received_swaps">No received swaps.</string>
    <string name="no_sent_swaps">No sent swaps.</string>
    <string name="no_accepted_swaps">No accepted swaps.</string>
    <string name="no_approved_swaps">No approved swaps.</string>
    <string name="no_swaps_found">No swaps found.</string>
    <string name="swipe_down_to_refresh">Swipe down to refresh.</string>
    <string name="notification_message">wants to swap his shift with your</string>
    <string name="any_time">any time</string>
    <string name="create_account">Create Account</string>
    <string name="send_swap_req">Send Request</string>
    <string name="login_id">Login ID</string>
    <string name="withdraw">Withdraw</string>
    <string name="waiting">Waiting</string>
    <string name="for1">for</string>
    <string name="approval">approval</string>
    <string name="approved">Approved</string>
    <string name="default_notification_channel_id">swapy_channel_7313</string>
    <string name="channel_name">Notification channel</string>
    <string name="channel_description">Receives notifications in the foreground</string>
    <string name="verify_account">Please verify your email,(Click to resent the email)</string>
    <string name="pls_verify_email">Please, Check your email inbox and verify your email then try again.</string>
    <string name="resend_verify_email">Resend the verification email</string>
    <string name="please_check_your_email">Please, check your email inbox for verification email.</string>
    <string name="try_different_email">Try different email.</string>
    <string name="or">or</string>
    <string name="retry">Retry</string>
    <string name="shift_swaps">Shift swaps</string>
    <string name="off_swaps">Off Swaps</string>
    <string name="preferred_off">Preferred Off: </string>
    <string name="preferred_off_2">Preferred Off</string>
    <string name="preferred_off_3">Preferred off</string>
    <string name="off_day">Off Day</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="you_already_sent_a_swap_request">You already sent a swap request</string>
    <string name="your_request_has_been_accepted">Your request has been accepted.\ncheck the above contact info.</string>
    <string name="your_preferred_off_day2">Your preferred off day:</string>
    <string name="your_preferred_off_day">Your preferred off day</string>
    <string name="you_accepted_request">You have accepted the request.\ncheck the above contact info.</string>
    <string name="user_sent_you_request">This user has sent you a request.\ncheck your received requests.</string>
    <string name="change_account_user_name">Change Account user name</string>
    <string name="change_user_email">Change your Email</string>
    <string name="change_password">Change your Password</string>
    <string name="switch_to_other_company">Switch to another Company</string>
    <string name="change_user_image">Change user image</string>
    <string name="link_accounts">Link accounts</string>
    <string name="delete_this_account">Delete this Account</string>
    <string name="cancel2">CANCEL</string>
    <string name="SAVE">SAVE</string>
    <string name="current_off">Current off</string>
    <string name="forget_your_password">Forget Your password?</string>
    <string name="send">SEND</string>
    <string name="your_preferred_day">Your preferred day:</string>
    <string name="banner_ad_unit_id">ca-app-pub-4676913002712533/2452250559</string>
    <string-array name="branch_raya">
        <item>Choose branch</item>
        <item>اتصالات الامارات</item>
    </string-array>
    <string-array name="branch_vodafone">
        <item>Choose branch</item>
        <item>Vodafone uk</item>
        <item>Vodafone Arabic</item>
    </string-array>
    <string-array name="branch_orange">
        <item>Choose branch</item>
        <item>Arabic Account</item>
    </string-array>
    <string-array name="branch">
        <item>Choose branch</item>
    </string-array>
    <string-array name="account_Etisalat_Emarat">
        <item>Choose account</item>
        <item>HS</item>
        <item>SMB</item>
        <item>DQ</item>
    </string-array>
    <string-array name="account_Vodafone_arabic">
        <item>Choose account</item>
        <item>Billing</item>
        <item>888</item>
        <item>Technical support</item>
    </string-array>
    <string-array name="account_vodafone_uk">
        <item>Choose account</item>
        <item>Billing</item>
        <item>Telesales</item>
        <item>ADSL</item>
    </string-array>
    <string-array name="account_arabic_account">
        <item>Choose account</item>
        <item>ADSL</item>
        <item>Phone support</item>
    </string-array>
    <string-array name="current_Shift">
        <item>Current Shift</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
    </string-array>
    <string-array name="Preferred_Shift">
        <item>Preferred Shift</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
    </string-array>
    <string-array name="Home_Preferred_Shift">
        <item>any time</item>
        <item>12:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
    </string-array>
    <string-array name="Home_Preferred_Off">
        <item>any day</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="Home_Preferred_Off2">
        <item>Day</item>
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
</resources>