<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:layoutDirection="ltr"
    tools:context=".Activities.AccountSittings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ahmed Rabie"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/sittings_change_account_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_account_user_name"
            style="@style/AccountSittingsTextStyle" />
        <TextView
            android:id="@+id/sittings_change_account_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            style="@style/AccountSittingsTextStyle" />
        <TextView
            android:id="@+id/sittings_change_account_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_user_email"
            style="@style/AccountSittingsTextStyle" />
        <TextView
            android:id="@+id/sittings_switch_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_to_other_company"
            style="@style/AccountSittingsTextStyle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Change Account Branch"
            style="@style/AccountSittingsTextStyle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_accounts"
            style="@style/AccountSittingsTextStyle" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_this_account"
            style="@style/AccountSittingsTextStyle"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/sittings_general_sittings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="General Sittings"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>