<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verifySwipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.VerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="25dp"
        android:paddingStart="25dp">

        <TextView
            android:id="@+id/verifyPlsCheckEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/please_check_your_email"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/verifyResendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/resend_verify_email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/or"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/verifyTryDiffEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/try_different_email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/verifySwipeToRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/swipe_down_to_refresh"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>