<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImageSignUp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/add_photo" />

            <ProgressBar
                android:id="@+id/progressBarImg"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/first_name"
                android:textSize="@dimen/editText_text_size"
                android:fontFamily="@font/roboto_condensed_regular"
                android:inputType="textCapWords"
                android:layout_marginEnd="2dp"/>

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:background="@drawable/edittext_style"
                android:hint="@string/last_name"
                android:textSize="@dimen/editText_text_size"
                android:fontFamily="@font/roboto_condensed_regular"
                android:inputType="textCapWords"
                android:layout_marginStart="2dp"/>


        </LinearLayout>



        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/email2"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/editText_text_size"
            android:fontFamily="@font/roboto_condensed_regular" />

        <EditText
            android:id="@+id/editTextLoginId"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/login_id"
            android:inputType="number"
            android:textSize="@dimen/editText_text_size"
            android:fontFamily="@font/roboto_condensed_regular" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="@dimen/editText_text_size"
            android:fontFamily="@font/roboto_condensed_regular" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/editText_text_size"
            android:fontFamily="@font/roboto_condensed_regular" />


        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="@dimen/editText_text_size"
            android:fontFamily="@font/roboto_condensed_regular" />



        <Spinner
            android:id="@+id/spinnerCompany"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/spinner_style"
            android:fontFamily="@font/raleway_medium" />

        <Spinner
            android:id="@+id/spinnerCompanyBranch"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/spinner_style"
            android:fontFamily="@font/raleway_medium" />


        <Spinner
            android:id="@+id/spinnerAccount"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/spinner_style"
            android:fontFamily="@font/raleway_medium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonSignUp"
                android:layout_width="154dp"
                android:layout_height="47dp"
                android:background="@drawable/btn_style"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="@dimen/button_text_size"
                android:layout_centerInParent="true"
                android:fontFamily="@font/raleway_medium"/>

            <ProgressBar
                android:id="@+id/progressBar_sign_up"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/already_have_account"
                android:textColor="@color/commonBlackTextColor"
                android:fontFamily="@font/raleway_medium" />

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_in"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/raleway_medium" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>