<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center">


    <LinearLayout
        android:id="@+id/noConnectionViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgNoConnectionHome"
            android:layout_width="200dp"
            android:layout_height="164.5dp"
            android:src="@drawable/ic_cloud_off" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/raleway_semi_bold"
            android:text="@string/no_internet_connection"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/retryBtnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_style"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/splashScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/logoSplashScreen"
            android:layout_width="351dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:contentDescription="Logo"
            android:src="@drawable/logo3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="351dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:contentDescription="Logo"
            android:src="@drawable/logo3" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:fontFamily="@font/roboto_condensed_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/editText_text_size" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_style"
            android:fontFamily="@font/roboto_condensed_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/editText_text_size" />

        <TextView
            android:id="@+id/pls_verify_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/pls_verify_email"
            android:textAlignment="center"
            android:visibility="gone" />

        <!--<TextView-->
        <!--android:id="@+id/resend_verify_email"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="4dp"-->
        <!--android:fontFamily="@font/raleway_medium"-->
        <!--android:text="@string/resend_verify_email"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:textStyle="bold"-->
        <!--android:visibility="gone" />-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonSignIn"
                android:layout_width="154dp"
                android:layout_height="47dp"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_style"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/btn_sign_in"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="@dimen/button_text_size" />

            <ProgressBar
                android:id="@+id/progressBar_sign_up"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/dont_have_account"
                android:textColor="@color/commonBlackTextColor" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/btn_sign_up"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/verify_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/commonBlackTextColor"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>